--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Crimson Text";
   color: #222;
   line-height: 1.3;
 }
@@ -19,10 +18,15 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  font-family: "Crimson Text";
+  margin: 0;
+}
+
 article {
   max-width: 43em;
-  padding-left: .5rem;
-  padding-right: .5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   padding-bottom: 1.3rem;
 }
 
@@ -62,4 +66,41 @@ blockquote {
   color: #999;
 }
 
-@media (min-width: 38em)
+@media (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  blockquote {
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  article h1 {
+    margin-top: 1.5rem;
+  }
+
+  article p {
+    margin-top: 1.4rem;
+  }
+
+}
+
+@media (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+}
+
+@media (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
+}
